--- a/CoreExtentions.DI.ServiceConfigurators/CoreExtentions.DI.ServiceConfigurators.csproj
+++ b/CoreExtentions.DI.ServiceConfigurators/CoreExtentions.DI.ServiceConfigurators.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.0.1</Version>
+    <Version>0.0.2</Version>
     <Authors>Storm Muller</Authors>
     <Company />
     <Product />
@@ -11,9 +11,9 @@
     <RepositoryUrl>https://github.com/stormmuller/Service-Configurators-For-Core</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
     <PackageTags>Dependancy Injection, ASP.NET Core, Convention Based Registration, Installer</PackageTags>
-    <AssemblyVersion>0.0.0.1</AssemblyVersion>
-    <FileVersion>0.0.0.1</FileVersion>
-    <PackageReleaseNotes>Added assembly name resolution, and service extention method calling by convention and by predicate</PackageReleaseNotes>
+    <AssemblyVersion>0.0.0.2</AssemblyVersion>
+    <FileVersion>0.0.0.2</FileVersion>
+    <PackageReleaseNotes>Added root assembly option, and fixed bug where Configurators would only be found in the root assembly. ConfiguratorClassConventionSuffix is now 'Configurator' and not 'Installer'.</PackageReleaseNotes>
     <NeutralLanguage>en</NeutralLanguage>
   </PropertyGroup>
 
